--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "mysql": "^2.18.1",
     "rxjs": "~7.8.0",
