--- a/src/backend/database/Dockerfile
+++ b/src/backend/database/Dockerfile
@@ -1,9 +1,3 @@
-FROM mysql:latest
+FROM mongo:latest
 
-# ENV MYSQL_ROOT_PASSWORD=rdyp
-
-ENV MYSQL_DATABASE=reaDYP_users
-
-COPY ./init.sql /docker-entrypoint-initdb.d/
-
-EXPOSE 3308
+EXPOSE 27017
