--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0 --port 80",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -20,6 +20,8 @@
     "@angular/router": "^15.1.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
+    "mongodb": "^3.7.3",
+    "mongoose": "^8.0.1",
     "mysql": "^2.18.1",
     "openai": "^3.2.1",
     "rxjs": "~7.8.0",
